2008-01-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/main.cc: Issue a warning when trying to chip erase in
	debugWire mode.
	* doc/avarice.1: Document that chip erase is not supported in
	debugWire mode.

2008-01-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2io.cc (jtag2::recvFrame): make msglen and its related
	variables unsigned int so they cannot suddenly become negative.

2007-11-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2bp.c (jtag2::addBreakpoint): fix a comparison that
	turned out to be an assignment.

2007-11-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix a bug with single-stepping on the JTAG ICE mkII or AVR Dragon.
	Single-stepping essentially behaves identical to CMND_GO, i. e. it
	returns immediately but the caller gets an EVT_BREAK posted once
	the single-step is completed.  In particular for software
	breakpoints (like on debugWire), this could take a bit more time
	than the internal processing delay.  When AVaRICE continued, and
	tried to query the program counter, the ICE wasn't ready yet
	again, and everything fell into parts.
	* src/jtag2.h: add new eventLoop() method.
	* src/jtag2run.cc: move the heart of jtag2::jtagContinue() out
	into eventLoop(), and use this method similarly for the
	jtag2::jtagSingleStep() method to await the EVT_BREAK.

2007-11-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: bump version to post-2.7

2007-10-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: bump version to 2.7

2007-07-08  Shaun Jackman  <sjackman@gmail.com>

	* src/jtag2bp.cc (layoutBreakpoints) <useDebugWire>: Bug fix.
	GDB continue command would hang when using debugWire.
	* src/jtag2io.cc (recvFrame): Correctly report a timeout.
	* src/jtag2run.cc (resetProgram): The JTAG ICE mkII and Dragon
	do not respond correctly to the CMND_RESET command while in
	debugWire mode. Send CMND_FORCED_STOP and CMND_WRITE_PC(0)
	instead.

2007-08-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
